config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -152,5 +152,6 @@
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
-    }
+    },
+    "domain": "https://splendid-onion-b0ec3.netlify.app"
 }
