--- a/content/data/config.json
+++ b/content/data/config.json
@@ -41,7 +41,7 @@
         ]
     },
     "footer": {
-        "logo": "images/logo.svg",
+        "logo": "/images/banner.jpg",
         "logo_alt": "Startup logo",
         "has_primary_nav": true,
         "primary_nav_title": "Company",
