config.json: updated tertiary_nav_links in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -82,13 +82,7 @@
             }
         ],
         "has_tertiary_nav": true,
-        "tertiary_nav_links": [
-            {
-                "label": "Privacy Policy",
-                "url": "/privacy-policy",
-                "style": "link"
-            }
-        ],
+        "tertiary_nav_links": [],
         "has_social": true,
         "social_links": [
             {
