config.json: updated base_font

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
     "style": "classic",
     "palette": "blue",
     "mode": "light",
-    "base_font": "serif",
+    "base_font": "sans-serif",
     "header": {
         "title": "Startup",
         "logo": "/images/banner.jpg",
