config.json: updated logo in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
     "base_font": "sans-serif",
     "header": {
         "title": "Startup",
-        "logo": "/images/violet-elm.jpg",
+        "logo": "/images/circle-cropped (2).png",
         "logo_alt": "Startup logo",
         "has_primary_nav": false,
         "has_secondary_nav": true,
