config.json: updated secondary_nav_links in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -37,6 +37,17 @@
                 "label": "Get Started",
                 "url": "/thank-you",
                 "style": "primary"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "has_icon": false,
+                "icon": "arrow-left",
+                "icon_position": "right",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ]
     },
