--- a/content/data/config.json
+++ b/content/data/config.json
@@ -39,7 +39,7 @@
                 "style": "primary"
             },
             {
-                "label": "Main",
+                "label": "Main-Blog",
                 "url": "#",
                 "style": "link",
                 "has_icon": false,
