config.json: updated style in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -41,7 +41,7 @@
             {
                 "label": "Main-Blog",
                 "url": "https://bgoonz-blog.netlify.app/",
-                "style": "link",
+                "style": "primary",
                 "has_icon": false,
                 "icon": "arrow-left",
                 "icon_position": "right",
