config.json: updated has_icon in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -42,7 +42,7 @@
                 "label": "Main-Blog",
                 "url": "https://bgoonz-blog.netlify.app/",
                 "style": "primary",
-                "has_icon": false,
+                "has_icon": true,
                 "icon": "arrow-left",
                 "icon_position": "right",
                 "new_window": false,
