config.json: updated new_window in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -45,7 +45,7 @@
                 "has_icon": true,
                 "icon": "arrow-left",
                 "icon_position": "right",
-                "new_window": false,
+                "new_window": true,
                 "no_follow": false,
                 "type": "action"
             }
