config.json: updated style in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -36,7 +36,7 @@
             {
                 "label": "Get Started",
                 "url": "/thank-you",
-                "style": "primary"
+                "style": "secondary"
             },
             {
                 "label": "Main-Blog",
